<resources>
    <string name="app_name">toDo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="edit">Edit</string>
    <string name="delete">DELETE</string>
    <string name="done">DONE</string>
    <string name="undone">UNDONE</string>
    <string name="all">ALL</string>
    <string name="add">add</string>
    <string name="time">time</string>
    <string name="TIme">Time</string>
    <string name="taskreport_report">%1$s!
      The task date is  %2$s, and  the tasks done situation is %3$s
    </string>
    <string name="date_picker_title">Date of Task:</string>
</resources>
